kubernetes/apps/media/jellyfin/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-external
subsets:
  - addresses:
      - ip: "192.168.1.5"
    ports:
      - name: http
        port: 30013
        protocol: TCP
