kubernetes/apps/media/jellyfin/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: 30013
      protocol: TCP
  selector: {}
