kubernetes/apps/media/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tailscale
  annotations:
    ingress-class: tailscale-nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: tailscale-nginx
  tls:
    - hosts:
        - jellyfin.nimbus.casa
      secretName: jellyfin-nimbus-casa-tls
  rules:
    - host: jellyfin.nimbus.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-external
                port:
                  number: 8096
